Added option to the posts view context menu 'View Posts As A Page' which shows a full view of all the posts on the page together
Colorized the text of links and images
Links where the text is the same as the URL now only show the URL once
When skin mods are installed, links now show a hand icon instead of the word 'LINK' and images now have a more graphical style appearance
Added an 'Hide Image URLs In Posts Display' to settings:General

*** 2.1.0 *** 04-24-2013 ***

Created custom skins and handling for Yes/No style dialogs
When editing a forum logo in the forum settings dialog, now does nothing if you exit the Edit/Browse dialog instead of choosing
Added text dialog skin for the Video skin (eg. the dialog where you view the changelog)
Added help dialog skin for the Video skin
Updated translations

*** 2.0.6 ***

Fixed duplicate error message dialogs
Fixed a bug causing some signatures not to show
Tapatalk: Improved progress bar updates on posts view
Video Skin: Moved progress bar to a slide-out at the bottom of the screen
Video Skin: Made previous and next page buttons appear disabled (instead of hidden) when no prev/next page
Added a button on the keyboard mod skins that toggles the large/small view

*** 2.0.5 ***

Moved the base windows classes to their own module
Moved XBMC constants to their own module
Logged in indicator now refreshes when returning to a window
Page menu now uses FB dialog instead of XBMC dialog
Fixed skin error with Video skin for missing default avatar file
Moved some of the Video skins lists into groups to get rid of the "Control BLAH in window BLAH has been asked to focus, but it can't" log messages
In Video skin, made back/edit close the slide out menu (if open) to match rest of skin behavior
In Video skin, in the full message view, fixed the links list so that it doesn't overflow the background
In posts view in Video skin, selected post now better highlighted. Changed own post highlight color

*** 2.0.4 ***
