@@ -13,15 +13,18 @@
     <setting id="ignore_forum_images" type="bool" label="32016" default="true" />
     <setting label="32518" type="text" id="post_user_info" default="status,postcount,reputation,joindate,location"/>
     <setting id="message_dialog_always_show_ok" type="bool" label="32014" default="false" />
-    <setting id="use_skin_mods" type="bool" label="32234" default="true" />
-    <setting id="use_keyboard_mod" type="bool" label="32237" subsetting="true" default="false"  enable="eq(-1,true)"/>
     <setting id="enable_ssl" type="bool" label="32235" default="false" visible="false"/>
     <setting id="save_logos" type="bool" label="32245" default="false" />
-    <setting id="skin" type="enum" label="32005" lvalues="32012|32011|32022" default="0" />
+    <setting label="32244" type="action" action="RunScript(script.forum.browser,settingshelp_general)"/>
+  </category>
+  <category label="32539">
+  	<setting id="skin" type="enum" label="32005" lvalues="32012|32011|32022" default="0" />
     <setting id="hide_image_urls" type="bool" label="32538" default="true" />
     <setting id="show_media_indicators" type="bool" label="32044" default="true" />
     <setting id="smi_count_link_images" type="bool" label="32045" subsetting="true" default="false" enable="eq(-1,true)"/>
-    <setting label="32244" type="action" action="RunScript(script.forum.browser,settingshelp_general)"/>
+    <setting id="use_skin_mods" type="bool" label="32234" default="true" />
+    <setting id="use_keyboard_mod" type="bool" label="32237" subsetting="true" default="false"  enable="eq(-1,true)"/>
+     <setting label="32244" type="action" action="RunScript(script.forum.browser,settingshelp_appearance)"/>
   </category>
   <category label="32018">
     <setting id="notify_enabled" type="bool" label="32019" default="false" />
@@ -54,8 +57,8 @@
   </category>
   <category label="32008">
   	<setting id="crypto_type" type="enum" label="32238" values="AES|Triple DES|AES &amp; Triple DES" default="2" />
-  	<setting id="disable_window_stacking" type="bool" label="32536" default="false" />
     <setting label="32239" type="file" id="crypto_key_file" default="" />
+    <setting id="disable_window_stacking" type="bool" label="32536" default="false" />
     <setting id="debug" type="bool" label="32228" default="false" />
     <setting id="debug_show_traceback_dialog" type="bool" label="32048" default="false" />
     <setting id="do_mybb_edit_bug_fix" type="bool" label="32233" default="true" />
